@@ -1,2 +1,2 @@
-#define VERSION "0.09.51"
+#define VERSION "0.09.52"
 #define YEARS   "2008-2012"
