@@ -97,6 +97,9 @@ manpagesection(PUBLIC MEMBER FUNCTIONS)
         specified as the function's second argument. This latter file is
         rewritten. This is em(not) a stack-operation: after processing
         tt(infilename) processing does not return to the original stream.
+        If tt(outfilename == "-") then the standard output stream
+        is used as the scanner's output medium; if tt(outfilename == "") then
+        the standard error stream is used as the scanner's output medium.
 
         bf(This member is not available with interactive scanners.)
     )
